# zero_to_production

./: Cargo.toml  README.md  configuration.yaml
src/: configration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscription.rs
tests/: healthcheck.rs
