[package]
name = "zero_to_production"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
anyhow = "1"
config = "0.11"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.44"
full = "0.3.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
env_logger = "0.9"
tracing = { version = "0.1", features = ["log"] }
log = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing-log = "0.1"
once_cell = "1"
  secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"





[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
